kubernetes/sisyphus-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sisyphus-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sisyphus-api
  template:
    metadata:
      name: sisyphus-api
      labels:
        app: sisyphus-api
    spec:
      containers:
        - name: sisyphus-api
          image: registry.digitalocean.com/sisyphus-registry/sisyphus-api:781de38
          ports:
            - containerPort: 8080
