kubernetes/sisyphus-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sisyphus-api-service
spec:
  selector:
    app: sisyphus-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
