kubernetes/sisyphus-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sisyphus-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sisyphus.garnaudov.com
      secretName: sisyphus-tls
  rules:
    - host: sisyphus.garnaudov.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sisyphus-api-service
                port:
                  number: 80
